Added datasource module (REST endpoint)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5962/app-db
+spring.datasource.username=app
+spring.datasource.password=app
 
