--- a/dashboard/.eslintrc.json
+++ b/dashboard/.eslintrc.json
@@ -1,35 +1,46 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": [
-        "standard",
-	    "plugin:react/recommended"
-    ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-	    "indent": [
-		    "error",
-		    "tab"
-	    ],
-	    "no-tabs": 0,
-	    "semi": [
-		    "error",
-		    "always"
-	    ]
-    }
+	"env": {
+		"browser": true,
+		"es6": true
+	},
+	"extends": [
+		"standard",
+		"plugin:react/recommended"
+	],
+	"globals": {
+		"Atomics": "readonly",
+		"SharedArrayBuffer": "readonly"
+	},
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 2018,
+		"sourceType": "module"
+	},
+	"plugins": [
+		"react"
+	],
+	"rules": {
+		"indent": [
+			"error",
+			"tab"
+		],
+		"no-tabs": 0,
+		"semi": [
+			"error",
+			"always"
+		],
+		"quotes": [
+			2,
+			"single",
+			{
+				"avoidEscape": true
+			}
+		],
+		"jsx-quotes": [
+			2,
+			"prefer-single"
+		]
+	}
 }
