--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
         - 5962:5432
   client-db:
-    image: postgres:latest
+    image: timescale/timescaledb:latest-pg12
 
     environment:
       POSTGRES_USER: user
@@ -19,4 +19,4 @@ services:
     depends_on:
       - app-db
     ports:
-      - 5961:5432
+      - 5555:5432
