Delete unused functions, refactor dashboards, add pcap processing * add data consumations on dashboards * add time filtering on dashboards

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-# PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5962/app-db
-spring.datasource.username=app
-spring.datasource.password=app
-
+spring.servlet.multipart.max-file-size=2GB
+spring.servlet.multipart.max-request-size=2GB
