--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
 		"react-jss": "^10.4.0",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.3"
+		"react-scripts": "3.4.3",
+		"victory": "^35.4.3",
+		"victory-core": "^35.4.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -54,6 +56,7 @@
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-react": "^7.21.4",
-		"eslint-plugin-standard": "^4.0.1"
+		"eslint-plugin-standard": "^4.0.1",
+		"jest": "24.9.0"
 	}
 }
