--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,27 @@
 version: "3"
 
 services:
-  app-db:
-    image: postgres:latest
-    environment:
-      POSTGRES_USER: app
-      POSTGRES_PASSWORD: app
-      POSTGRES_DB: app-db
+  backend:
+    build:
+      context: backend
+      dockerfile: Dockerfile
+    container_name: "backend"
+    networks:
+      - backend
     ports:
-        - 5962:5432
-  client-db:
-    image: timescale/timescaledb:latest-pg12
+      - "8080:8080"
 
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: user
-      POSTGRES_DB: user-db
-    depends_on:
-      - app-db
+  frontend:
+    build:
+      context: frontend
+      dockerfile: Dockerfile
+    container_name: "frontend"
     ports:
-      - 5555:5432
+      - "80:80"
+    depends_on:
+      - backend
+    networks:
+      - backend
+
+networks:
+  backend:
