--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.servlet.multipart.max-file-size=2GB
 spring.servlet.multipart.max-request-size=2GB
+spring.datasource.url=jdbc:postgresql://localhost:5432/pcap
+spring.datasource.username=netdash
+spring.datasource.password=netdash
+
