--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,6 @@ services:
       context: backend
       dockerfile: Dockerfile
     container_name: "backend"
-    networks:
-      - backend
     ports:
       - "8080:8080"
 
@@ -20,8 +18,11 @@ services:
       - "80:80"
     depends_on:
       - backend
-    networks:
-      - backend
 
-networks:
-  backend:
+  database:
+    image: timescale/timescaledb:latest-pg12
+    ports:
+      - "5400:5432"
+    environment:
+      - POSTGRES_USER=netdash
+      - POSTGRES_PASSWORD=netdash
