--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -21,15 +21,18 @@ dependencies {
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+	implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
 	compile group: 'jnetpcap', name: 'jnetpcap', version: '1.4.r1425-1g'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 }
 
 test {
-	useJUnit()
+	useJUnitPlatform()
 }
 
 compileKotlin {
