--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,18 +6,24 @@
 		"@babel/core": "^7.12.3",
 		"@babel/preset-env": "^7.12.1",
 		"@babel/preset-react": "^7.12.1",
-		"@material-ui/core": "^4.11.0",
-		"@material-ui/icons": "^4.9.1",
-		"@nivo/bar": "^0.62.0",
-		"@nivo/line": "^0.64.0",
-		"@nivo/pie": "^0.62.0",
-		"@nivo/waffle": "^0.62.0",
+		"@chakra-ui/icons": "^1.0.8",
+		"@chakra-ui/react": "^1.4.2",
+		"@emotion/react": "11",
+		"@emotion/styled": "11",
+		"@nivo/axes": "^0.67.0",
+		"@nivo/bar": "^0.67.0",
+		"@nivo/core": "^0.67.0",
+		"@nivo/line": "^0.67.0",
+		"@nivo/pie": "^0.67.0",
+		"@nivo/sankey": "^0.67.0",
+		"@nivo/tooltip": "^0.67.0",
+		"@nivo/waffle": "^0.67.0",
 		"@reduxjs/toolkit": "^1.4.0",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
-		"axios": "^0.21.0",
 		"babel-loader": "8.1.0",
+		"framer-motion": "4",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
