--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
 	},
 	"devDependencies": {
 		"eslint": "^6.6.0",
+		"eslint-config-airbnb": "^18.2.1",
 		"eslint-config-standard": "^14.1.1",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-node": "^11.1.0",
