--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 		"@emotion/styled": "11",
 		"@nivo/axes": "^0.67.0",
 		"@nivo/bar": "^0.67.0",
+		"@nivo/chord": "^0.67.0",
 		"@nivo/core": "^0.67.0",
 		"@nivo/line": "^0.67.0",
 		"@nivo/pie": "^0.67.0",
